spacing issues fixed in timeline

--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ a:hover {
   }
   .timeline-centered .timeline-info,
   .timeline-centered .timeline-content {
-    width: 50%;
+    width: 48%;
   }
   .timeline-centered > .timeline-item:nth-child(odd) .timeline-info {
     float: left;
